@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-08-17T16:06:22Z",
-  "count_outdated" : 1732,
-  "uniques_outdated" : 511,
-  "count" : 1750,
+  "timestamp" : "2022-08-18T00:35:16Z",
+  "count_outdated" : 1734,
+  "uniques_outdated" : 512,
+  "count" : 1751,
   "uniques" : 522,
   "clones" : [
-    {
-      "timestamp": "2022-08-03T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-08-04T00:00:00Z",
       "count": 2,
